--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,7 @@ dependencies:
   cached_network_image: ^3.4.1
   flutter_launcher_icons: ^0.14.1
   flutter_riverpod: ^2.5.1
+  modal_bottom_sheet: ^3.0.0
   flutter:
     sdk: flutter
   flutter_localizations:
