Закончена работа с детальным просмотром внутри покедекса

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,7 @@ dependencies:
   flutter_launcher_icons: ^0.14.1
   flutter_riverpod: ^2.5.1
   modal_bottom_sheet: ^3.0.0
+  fl_chart: ^0.69.0
   flutter:
     sdk: flutter
   flutter_localizations:
