Исправлена работа поиска в покедексе. Закончена работа с первым покемонов пользователя.Добавлены настройки

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,7 +16,6 @@ dependencies:
   hive_flutter: ^1.1.0
   dio: ^5.7.0
   cached_network_image: ^3.4.1
-  flutter_launcher_icons: ^0.14.1
   flutter_riverpod: ^2.5.1
   modal_bottom_sheet: ^3.0.0
   insta_image_viewer: ^1.0.4
@@ -32,10 +31,17 @@ dev_dependencies:
   flutter_lints: ^5.0.0
   hive_generator: ^2.0.1
   build_runner: ^2.4.13
+  flutter_launcher_icons: ^0.14.1
   flutter_test:
     sdk: flutter
 
-
+flutter_launcher_icons:
+  image_path: "assets/icons/icon2.png"
+  android: true
+  ios: true
+  remove_alpha_ios : true
+  adaptive_icon_background: "assets/icons/icon2.png"
+  adaptive_icon_foreground: "assets/icons/icon2.png"
 
 flutter:
   uses-material-design: true
