--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,7 +19,7 @@ dependencies:
   modal_bottom_sheet: ^3.0.0
   insta_image_viewer: ^1.0.4
   fl_chart: ^0.69.0
-  awesome_snackbar_content: ^0.1.4
+  percent_indicator: ^4.2.4
   flutter:
     sdk: flutter
   flutter_localizations:
