--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,7 @@ dependencies:
   insta_image_viewer: ^1.0.4
   fl_chart: ^0.69.0
   percent_indicator: ^4.2.4
+  url_launcher: ^6.3.1
   flutter:
     sdk: flutter
   flutter_localizations:
